
---
*** New 'diff-mode' font locking face 'diff-error'.
This face is used for error messages from 'diff'.

+++
*** New command 'diff-refresh-hunk'.
This new command (bound to 'C-c C-l') regenerates the current hunk.

** thing-at-point

+++
*** New 'thing-at-point' target: 'existing-filename'.
This is like 'filename', but is a full path, and is nil if the file
doesn't exist.

+++
*** New variable 'thing-at-point-provider-alist'.
This allows mode-specific alterations to how 'thing-at-point' works.

---
*** thing-at-point now respects fields.
'thing-at-point' (and all functions that use it, like
'symbol-at-point') will narrow to the current field (if any) before
trying to identify the thing at point.

*** New function 'thing-at-mouse'.

** image-dired

---
*** 'image-dired-mouse-toggle-mark' now toggles files in the active region.

+++
*** New user option 'image-dired-thumb-visible-marks'.
If non-nil (the default), use 'image-dired-thumb-mark' to say what
images are marked.

---
*** New command 'image-dired-delete-marked'.

** Flymake mode

+++
*** New command 'flymake-show-project-diagnostics'
This lists all diagnostics for buffers in the currently active
project.  The listing is similar to the one obtained by
'flymake-show-buffer-diagnostics', but adds a column for the
project-relative file name.  For backends which support it,
'flymake-show-project-diagnostics' also lists diagnostics for files
that have not yet been visited.

+++
*** New user options to customize Flymake's mode-line.
The new user option 'flymake-mode-line-format' is a mix of strings and
symbols like 'flymake-mode-line-title', 'flymake-mode-line-exception'
and 'flymake-mode-line-counters'.  The new user option
'flymake-mode-line-counter-format' is a mix of strings and symbols
like 'flymake-mode-line-error-counter',
'flymake-mode-line-warning-counter' and 'flymake-mode-line-note-counter'.

** Time

---
*** 'display-time-world' has been renamed to 'world-clock'.